--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
             <button class="btn" id="randomize">Randomize</button>
         </div>
         <div class="palette">
-            <div class="colors" id="red"></div>
-            <div class="colors" id="orange"></div>
-            <div class="colors" id="yellow"></div>
-            <div class="colors" id="lime"></div>
-            <div class="colors" id="green"></div>
-            <div class="colors" id="aqua"></div>
-            <div class="colors" id="blue"></div>
-            <div class="colors" id="purple"></div>
-            <div class="colors" id="pink"></div>
-            <div class="colors" id="bright-pink"></div>
-            <div class="colors" id="pinkred"></div>
-            <div class="colors" id="white"></div>
-            <div class="colors" id="grey"></div>
-            <div class="colors" id="slate"></div>
-            <div class="colors" id="black"></div>
+            <div class="colors" data-color="red" id="red"></div>
+            <div class="colors" data-color="rgb(255, 123, 0)" id="orange"></div>
+            <div class="colors" data-color="rgb(255, 238, 0)" id="yellow"></div>
+            <div class="colors" data-color="rgb(136, 255, 0)" id="lime"></div>
+            <div class="colors" data-color="rgb(0, 255, 21)" id="green"></div>
+            <div class="colors" data-color="rgb(0, 255, 221)" id="aqua"></div>
+            <div class="colors" data-color="rgb(0, 60, 255)" id="blue"></div>
+            <div class="colors" data-color="rgb(111, 0, 255)" id="purple"></div>
+            <div class="colors" data-color="rgb(234, 0, 255)" id="pink"></div>
+            <div class="colors" data-color="rgb(255, 0, 170)" id="bright-pink"></div>
+            <div class="colors" data-color="rgb(255, 0, 76)" id="pinkRed"></div>
+            <div class="colors" data-color="white" id="white"></div>
+            <div class="colors" data-color="grey" id="grey"></div>
+            <div class="colors" data-color="rgb(66, 66, 66)" id="slate"></div>
+            <div class="colors" data-color="black" id="black"></div>
         </div>
         <div class="grid-container">
         </div>
